--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,11 @@
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>HHR - Dating Social Network Website</title>
 
-        
-        <link href="/css/style.hhr.v4.css" rel="stylesheet">
-
+        <link href="/css/group-more.p1.css" rel="stylesheet">
+        <link href="/css/group-more.p2.css" rel="stylesheet">
+        <link href="/css/group-more.p3.css" rel="stylesheet">
+        <link href="/css/group-more.p4.css" rel="stylesheet">
+        <link href="/css/custom.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
@@ -31,6 +33,6 @@
       To create a production bundle, use `npm run build`.
     -->
       
-    <script src="/js/bundle.js"></script>
+    <script src="/js/index.bundle.js"></script>
   </body>
 </html>
